--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
                 <a href="https://en.wikipedia.org/wiki/Donato_Carrisi" target="_blank">Wikipedia o Donato Carrisi- strona anglojęzyczna</a>
             </li>
         </ul>
+        <footer>byAnn's 2023</footer>
     </body>
 </html>
