--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>"W labiryncie"</li>
         </ol>
         
-        <h3>Więcej informacji o autorze i jego powieściach:</h3>
+        <h3>Więcej informacji o autorze i jego powieściach znajdziesz tutaj:</h3>
         <ul>
             <li>
                 <a href="https://lubimyczytac.pl/ksiazka/5000200/jestem-otchlania" target="_blank">"Lubimy czytać"-recenzja</a>
